@@ -1,3 +1,6 @@
+13 December 2016: Wouter
+	- Fix nsd-control and ipv6 only.
+
 8 December 2016: Wouter
 	- tag 4.1.14
 	- trunk contains 4.1.15 in development.
